# fintech-qe-framework

./: README.md  conftest.py  pyproject.toml  pytest.ini
config/: __init__.py  settings.py
src/: __init__.py
src/api/: __init__.py  client.py  routes.py  services.py
src/ui/: __init__.py  flows.py
src/utils/: __init__.py  data_factory.py  logger.py  models.py
tests/api/: __init__.py  test_transactions_api.py  test_transactions_validation.py  test_users_api.py
tests/ui/: __init__.py  test_flows_ui.py
